Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -577,6 +577,37 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "0        0.0\n",
+       "1        0.0\n",
+       "2        0.0\n",
+       "3        0.0\n",
+       "4        0.0\n",
+       "        ... \n",
+       "32556    0.0\n",
+       "32557    1.0\n",
+       "32558    0.0\n",
+       "32559    0.0\n",
+       "32560    1.0\n",
+       "Name: >50K, Length: 32561, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
